# spectrum

./: .b4-config  .codespellrc  .gitignore  .shellcheckrc  CONTRIBUTING  README  bibliography.html  contributing.html  design.html  impressum.html  index.html  motivation.html  nlnet-pet-2019-03.html  participating.html  release.nix  style.css  todo.html  uncrustify.cfg  update-signing-keys.gpg  update-url  version.license
Documentation/: Gemfile  README  README.license  _config.yml  bibliography.html  contributing.html  default.nix  design.html  gemset.nix  impressum.html  index.html  motivation.html  sitemap.adoc  style.css
Documentation/_includes/: breadcrumb.html  favicon.html  footer.html  footer_custom.html  sitemap.html  title.html
Documentation/_layouts/: page.html
Documentation/_plugins/: site_title_link.rb
Documentation/_sass/custom/: custom.scss
Documentation/about/: architecture.adoc
Documentation/contributing/: building-documentation.adoc
Documentation/development/: build-configuration.adoc  built-in-vms.adoc  index.adoc  persistent-storage.adoc  updates.adoc  uuid-reference.adoc
Documentation/doc/: index.adoc
Documentation/doc/about/: architecture.adoc  index.adoc  requirements.adoc
Documentation/doc/contributing/: b4.adoc  building-documentation.adoc  communication.adoc  first-patch.adoc  index.adoc  replying.adoc  reviewing-patches.adoc  testing-patches.adoc  working-with-patches.adoc  writing_documentation.adoc
Documentation/doc/decisions/: 000-lightweight-architecture-decision-record-template.adoc  001-host-update-mechanism.adoc  002-install-options.adoc  003-partitioning.adoc  004-data-at-rest-encryption.adoc  005-virtual-machine-monitor.adoc  006-drivers-on-host.adoc  007-usb-virtual-machines.adoc  008-inter-vm-communication-mechanisms.adoc  index.adoc
Documentation/doc/development/: build-configuration.adoc  built-in-vms.adoc  checks.adoc  control-groups.adoc  debugging.adoc  index.adoc  persistent-storage.adoc  release.adoc  updates.adoc  uuid-reference.adoc
Documentation/doc/installation/: binary-cache.adoc  getting-spectrum.adoc  index.adoc
Documentation/doc/using-spectrum/: creating-custom-vms.adoc  index.adoc  running-vms.adoc  (+1 more)
Documentation/installation/: binary-cache.adoc  getting-spectrum.adoc  index.adoc
Documentation/logo/: index.html
Documentation/software/: index.html
Documentation/using-spectrum/: creating-custom-vms.adoc  index.adoc  updates.adoc  vm-file-access.adoc
Documentation/www/: README  bibliography.html  contributing.html  design.html  impressum.html  index.html  motivation.html
LICENSES/: BSD-2-Clause.txt
doc/: index.html
host/: efi.nix  verity.nix
host/initramfs/: Makefile  default.nix  extfs.nix  shell.nix
host/rootfs/: Makefile  busybox-config  busybox-config.license  default.nix  file-list.mk  os-release.in  shell.nix  updatevm-url-env  verity.nix
host/start-vmm/: default.nix  fork.c  net.c
host/start-vmm/subprojects/packagefiles/proc-macro2/: meson.build
img/app/: Makefile  default.nix  file-list.mk  shell.nix
lib/: common.mk  config.default.nix  config.nix  erofs.mk  fake-update-signing-key.gpg  kcmdline-utils.mk  nixpkgs.default.nix  verity.mk  version.nix
logo/: index.html
nlnet-pet-2019-03/: bom.txt
pkgs/: default.nix  overlay.nix
pkgs/cloud-hypervisor/: 0001-build-use-local-vhost.patch  0002-virtio-devices-add-a-GPU-device.patch  default.nix
pkgs/gtk3/: default.nix
pkgs/skaware-packages/: default.nix
release/: update.nix
release/checks/: default.nix  doc-anchors.nix  doc-links.nix  installer.nix  no-roothash.nix  pkg-tests.nix  rustfmt.nix  shfmt.nix  try.nix  uncrustify.nix  whitespace.nix
release/checks/integration/: appimage.c  default.nix  late-serial.c  lib.c  lib.h  meson.build  meson_options.txt  networking.c  portal.c  try.c
release/combined/: default.nix  eosimages.nix  grub.cfg.in
release/installer/: configuration.nix  run-vm.nix
release/live/: Makefile  default.nix  run-make.sh  shell.nix
scripts/: dist-cloud-hypervisor.sh  format-uuid.awk  format-uuid.sh  genfiles.awk  genfiles.sh  git-rebase  make-erofs.sh  make-gpt.bash  make-gpt.sh  make-image.sh  make-live-image.sh  make-update.sh  pre-commit.sh  run-make.sh  run-qemu.sh  run-spectrum-vm.c  run-spectrum-vm.nix  sfdisk-field.awk  start-passt.elb  update-nixpkgs.sh  with-taps.elb
software/: index.html
software/cloud-hypervisor/: index.html
tools/: default.nix  lsvm.rs  meson.build  meson.options  meson_options.txt  sd-notify-adapter.c  shell.nix  updates-dir-check.c  vm-set-persist.c
tools/cgroup-setup/: Cargo.lock.license  Cargo.toml  default.nix
tools/cgroup-setup/src/: cgroup.rs  main.rs
tools/lseek/: default.nix  lseek.c
tools/lsvm/: lsvm.rs  meson.build
tools/mount-flatpak/: Cargo.toml  config  default.nix
tools/mount-flatpak/src/: keyfile.rs  main.rs  metadata.rs
tools/router/: Cargo.lock.license  Cargo.toml  default.nix
tools/router/src/: main.rs  packet.rs  protocol.rs  router.rs  upstream.rs
tools/sd-notify-adapter/: meson.build  sd-notify-adapter.c
tools/start-vmm/: ch.h  ch.rs  default.nix  lib.rs  meson.build  net-util.c  net-util.h  net.c  net.rs  s6.rs  start-vmm.rs
tools/start-vmm/subprojects/packagefiles/itoa/: meson.build
tools/start-vmm/subprojects/packagefiles/miniserde/: meson.build
tools/start-vmm/subprojects/packagefiles/unicode-ident/: meson.build
tools/start-vmm/tests/: helper.rs  meson.build  vm_command-basic.rs  vm_command-multiple-disks.rs
tools/subprojects/packagefiles/syn/: meson.build
tools/updates-dir-check/: meson.build  updates-dir-check.c
tools/xdg-desktop-portal-spectrum/: default.nix  meson.build  xdg-desktop-portal-spectrum.c
tools/xdg-desktop-portal-spectrum-host/: Cargo.toml
tools/xdg-desktop-portal-spectrum-host/src/: documents.rs  file_chooser.rs  main.rs
tools/xdp-forwarder/: helpers.h  meson.build  parsing_helpers.h  prog_physical.c  prog_router.c  rewrite_helpers.h  set_router_iface.c
vm-lib/: make-vm.nix
vm/app/: firefox.nix  gnome-text-editor.nix  systemd-sysupdate.nix  updates.nix
(+192 files in other folders)
