# SPDX-License-Identifier: CC0-1.0
# SPDX-FileCopyrightText: 2025 Yureka Lilian <yureka@cyberchaos.dev>

[package]
name = "spectrum-router"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
env_logger = "0.11.8"
log = { version = "0.4.27", features = ["release_max_level_debug"] }
vhost-device-net = "0.1.0"
tokio = { version = "1.48.0", features = ["macros", "rt"] }
futures-util = "0.3.31"
zerocopy = "0.8.27"
tokio-stream = "0.1.17"
arrayvec = "0.7.6"
vm-memory = "0.16"
tokio-util = "0.7.17"
listenfd = "1.0.2"
