# SPDX-License-Identifier: CC0-1.0
# SPDX-FileCopyrightText: 2024-2025 Alyssa Ross <hi@alyssa.is>

[package]
name = "xdg-desktop-portal-spectrum-host"
version = "0.1.0"
edition = "2024"

[dependencies]
async-executor = { version = "1.12.0", features = ["static"] }
async-io = "2.3.2"
futures-lite = "2.3.0"
landlock = "0.4.4"
percent-encoding = "2.3.1"
rustix = "1.0"
tracing = "0.1.43"
url = "2.5.0"
zbus = "5.1.1"

[dependencies.tracing-subscriber]
version = "0.3.22"
default-features = false
features = ["env-filter", "fmt"]
